--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
         "babel-preset-react-app": "^9.0.0",
         "camelcase": "^5.2.0",
         "case-sensitive-paths-webpack-plugin": "2.2.0",
+        "cheerio": "^1.0.0-rc.3",
         "css-loader": "2.1.1",
         "dotenv": "6.2.0",
         "dotenv-expand": "4.2.0",
