--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
         "fs-extra": "7.0.1",
         "html-webpack-plugin": "4.0.0-beta.5",
         "http-proxy-middleware": "^0.19.1",
+        "iconv-lite": "^0.4.24",
         "identity-obj-proxy": "3.0.0",
         "is-wsl": "^1.1.0",
         "jest": "24.7.1",
