--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
         "camelcase": "^5.2.0",
         "case-sensitive-paths-webpack-plugin": "2.2.0",
         "cheerio": "^1.0.0-rc.3",
+        "classnames": "^2.2.6",
         "css-loader": "2.1.1",
         "dotenv": "6.2.0",
         "dotenv-expand": "4.2.0",
@@ -70,7 +71,8 @@
     "scripts": {
         "start": "node scripts/start.js",
         "build": "node scripts/build.js",
-        "test": "node scripts/test.js"
+        "test": "node scripts/test.js",
+        "server": "nodemon service/index.js"
     },
     "eslintConfig": {
         "extends": "react-app"
@@ -136,5 +138,8 @@
         "presets": [
             "react-app"
         ]
+    },
+    "devDependencies": {
+        "nodemon": "^1.19.0"
     }
 }
