--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
         "koa-bodyparser": "^4.2.1",
         "koa-router": "^7.4.0",
         "mini-css-extract-plugin": "0.5.0",
+        "mysql2": "^1.6.5",
         "node-sass": "^4.12.0",
         "optimize-css-assets-webpack-plugin": "5.0.1",
         "pnp-webpack-plugin": "1.2.1",
