--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
         "mini-css-extract-plugin": "0.5.0",
         "mysql2": "^1.6.5",
         "node-sass": "^4.12.0",
+        "node-schedule": "^1.3.2",
         "optimize-css-assets-webpack-plugin": "5.0.1",
         "pnp-webpack-plugin": "1.2.1",
         "postcss-flexbugs-fixes": "4.1.0",
