--- a/package.json
+++ b/package.json
@@ -41,7 +41,9 @@
         "jest-watch-typeahead": "0.3.0",
         "koa": "^2.7.0",
         "koa-bodyparser": "^4.2.1",
+        "koa-csrf": "^3.0.7",
         "koa-router": "^7.4.0",
+        "koa-session": "^5.12.0",
         "mini-css-extract-plugin": "0.5.0",
         "mysql2": "^1.6.5",
         "node-sass": "^4.12.0",
@@ -53,6 +55,7 @@
         "postcss-normalize": "7.0.1",
         "postcss-preset-env": "6.6.0",
         "postcss-safe-parser": "4.0.1",
+        "querystring": "^0.2.0",
         "react": "^16.8.6",
         "react-app-polyfill": "^1.0.1",
         "react-dev-utils": "^9.0.1",
