--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
         "react-dev-utils": "^9.0.1",
         "react-dom": "^16.8.6",
         "react-router-dom": "^5.0.0",
+        "react-use": "^9.0.0",
         "resolve": "1.10.0",
         "sass-loader": "7.1.0",
         "semver": "6.0.0",
@@ -146,5 +147,9 @@
     },
     "devDependencies": {
         "nodemon": "^1.19.0"
+    },
+    "peerDependencies": {
+        "keyboardjs": "^2.5.1",
+        "rebound": "^0.1.0"
     }
 }
