--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
         "koa-csrf": "^3.0.7",
         "koa-router": "^7.4.0",
         "koa-session": "^5.12.0",
+        "koa-static": "^5.0.0",
         "mini-css-extract-plugin": "0.5.0",
         "mysql2": "^1.6.5",
         "node-sass": "^4.12.0",
